# handsdown

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDSDOWN.md  MANIFEST.in  MODULES.md  Pipfile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  vulture_whitelist.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: on_push.yml  on_push_coverage.yml  on_release.yml  sanity_check.yml  update_docs.yml
assets/: gh_pages_config.yml  mkdocs.yml  readthedocs.yml
docs/: 404.html  MODULES.md  README.md  _config.yml  build_lib_handsdown___main__.md  build_lib_handsdown_cli_parser.md  build_lib_handsdown_generator.md  build_lib_handsdown_handsdown.md  build_lib_handsdown_indent_trimmer.md  build_lib_handsdown_loader.md  build_lib_handsdown_main.md  build_lib_handsdown_path_finder.md  build_lib_handsdown_processors_base.md  build_lib_handsdown_processors_index.md  build_lib_handsdown_processors_pep257.md  build_lib_handsdown_processors_rst.md  build_lib_handsdown_processors_smart.md  build_lib_handsdown_signature.md  build_lib_handsdown_utils.md  examples_google_docstrings.md  examples_google_example.md  examples_index.md  examples_pep257_docstrings.md  examples_rst_docstrings.md  examples_rst_example.md  handsdown___main__.md  handsdown_cli_parser.md  handsdown_generator.md  handsdown_handsdown.md  handsdown_indent_trimmer.md  handsdown_index.md  handsdown_loader.md  handsdown_main.md  handsdown_md_document.md  handsdown_module_record.md  handsdown_path_finder.md  handsdown_processors_base.md  handsdown_processors_index.md  handsdown_processors_pep257.md  handsdown_processors_rst.md  (+9 more)
docs/examples/: comment_typed.md  expressions.md  google_docstrings.md  index.html  index.md  main_example.md  pep257_docstrings.md  pyi_typed.md  rst_docstrings.md  sphinx_docstrings.md  typed.md
docs/examples/comment_typed/: index.html
docs/examples/expressions/: index.html
docs/examples/google_docstrings/: index.html
docs/examples/main_example/: index.html
docs/examples/pep257_docstrings/: index.html
docs/examples/pyi_typed/: index.html
docs/examples/rst_docstrings/: index.html
docs/examples/sphinx_docstrings/: index.html
docs/examples/typed/: index.html
docs/handsdown/: __main__.md  cli_parser.md  constants.md  docstring_formatter.md  exceptions.md  function_repr.md  generator.md  indent_trimmer.md  index.html  index.md  jinja_manager.md  loader.md  magic_main.md  main.md  md_document.md  module.md  module_record.md  path_finder.md  sentinel.md  settings.md  signature.md  utils.md  version.md
docs/handsdown/assets/: index.md
docs/handsdown/main/: index.html
docs/search/: search_index.json
docs_examples/: README.md  comment_typed.md  expressions.md  google_docstrings.md  main_example.md  pep257_docstrings.md  py2.md  pyi_typed.md  rst_docstrings.md  sphinx_docstrings.md  typed.md
docsmd/: README.md
docsmd/examples/: comment_typed.md  expressions.md  google_docstrings.md  index.md  main_example.md  pep257_docstrings.md  pyi_typed.md  rst_docstrings.md  sphinx_docstrings.md  typed.md
docsmd/handsdown/: cli_parser.md  constants.md  exceptions.md  index.md  jinja_manager.md  loader.md  main.md  md_document.md  module.md
examples/: __init__.py  comment_typed.py  expressions.py  google_docstrings.py  google_example.py  main_example.py  pep257_docstrings.py  py2.py  pyi_typed.py  pyi_typed.pyi  rst_docstrings.py  rst_example.py  sphinx_docstrings.py  typed.py
handsdown/: README.md  __init__.py  __main__.py  cli_parser.py  constants.py  docstring_formatter.py  exceptions.py  function_repr.py  generator.py  handsdown.py  indent_trimmer.py  jinja_manager.py  loader.py  main.py  md_document.py  module_record.py  path_finder.py  sentinel.py  settings.py  signature.py  type_defs.py  utils.py  version.py
handsdown/ast_parser/: __init__.py  argument_record.py  attribute_record.py  class_analyzer.py  class_record.py  enums.py  expression_record.py  function_record.py  import_record.py  module_analyzer.py  module_record.py  module_record_list.py  node_record.py  smart_ast.py  source_generator.py  type_defs.py
handsdown/docs/: README.md  cli_parser.md  docstring_formatter.md  function_repr.md  generator.md  indent_trimmer.md  index.md  loader.md  main.md  md_document.md  module_record.md  path_finder.md  processors_base.md  processors_index.md  processors_pep257.md  processors_rst.md  processors_smart.md  signature.md  utils.md
handsdown/docs_examples/: README.md
handsdown/generators/: base.py  material.py  mkdocs.py  rtd.py
handsdown/processors/: base.py  pep257.py  rst.py  section.py  section_block.py  section_map.py  smart.py
handsdown/utils/: __init__.py  blackify.py  docstring_formatter.py  import_string.py  indent_trimmer.py  logger.py  logging.py  markdown.py  nice_path.py  os_environ_mock.py  path.py  path_finder.py  strings.py  type_checking_mock.py
scripts/: before_commit.sh  dockerize.sh  sync_docs.sh  update_docs.sh
tests/: test_cli_parser.py  test_docstring_formatter.py  test_function_repr.py  test_generator.py  test_indent_trimmer.py  test_loader.py  test_main.py  test_md_document.py  test_module_record.py  test_path_finder.py  test_section_map.py  test_utils.py
tests/ast_parser/: test_enums.py  test_type_defs.py
tests/generators/: test_mkdocs.py
tests/processors/: test_base.py  test_pep257.py
tests/static/: pep257_docstring.txt
tests/utils/: test_docstring_formatter.py  test_import_string.py  test_indent_trimmer.py  test_init.py  test_logger.py  test_logging.py  test_nice_path.py  test_os_environ_mock.py  test_path_finder.py  test_strings.py  test_type_checking_mock.py
(+200 files in other folders)
